# CiCiAgent

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
asserts/: process_video.sh
cici/: __init__.py  __main__.py  agent.py  compression.py  frontmatter.py  mcp_client.py  memory.py  paths.py  prompt.py  session.py  skills.py  subagent.py  tool_models.py  tools_base.py  tui.py  ui.py
cici/providers/: __init__.py  anthropic_adapter.py  base.py
cici/tools/: __init__.py  filesystem.py  permission.py  registry.py  runner.py  schemas.py  shell.py  todos.py  web.py
src/: __main__.py  agent.py  compression.py  frontmatter.py  mcp_client.py  memory.py  paths.py  prompt.py  skills.py  subagent.py  tool_models.py  tools.py  tools_base.py  ui.py
src/providers/: anthropic_adapter.py  openai_adapter.py
