[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cici"
version = "0.1.0"
description = "A minimal, hackable coding agent for your terminal."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["agent", "llm", "coding-agent", "anthropic", "openai", "mcp", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.40.0",
    "openai>=1.50.0",
    "rich>=13.0.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "textual>=0.85",
    "typer>=0.12",
]

[project.optional-dependencies]
# Offline model-info lookup (token windows, pricing). Enables a richer
# model registry; cici falls back to a built-in table if absent.
litellm = ["litellm>=1.40"]

dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/zhiminzhang0830/CiCiAgent"
Repository = "https://github.com/zhiminzhang0830/CiCiAgent"
Issues = "https://github.com/zhiminzhang0830/CiCiAgent/issues"

[project.scripts]
cici = "cici.__main__:cli"

[tool.setuptools.packages.find]
include = ["cici*"]

[tool.ruff]
target-version = "py311"
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
